# Python_Security_Bot

./: Makefile  PROJECT_ERROR_REPORT.md  README.md  pyproject.toml  requirements.txt
data/: alerts.csv
socbot/: cache.py  cli.py  enrichers.py  iocs.py  logging_setup.py  models.py  parse.py  report.py  scoring.py
socbot/automation/systemd/: socbot.service  socbot.timer
tests/: test_iocs.py  test_parse.py  test_scoring.py
