[project]
name = "soc-automation-bot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "cachetools>=5.0",
  "pandas>=2.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "requests>=2.0",
  "rich>=13.0",
  "tenacity>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
